syntax = "proto3";

option go_package = "./pb"; 

import "google/protobuf/timestamp.proto";

package websiteMonitor;

service WebsiteMonitorService {
    rpc AutoMigrate(EmptyRequest) returns (ResponseMessage);
    rpc GetAllSites(EmptyRequest) returns (SitesResponse);
    rpc CreateSite(SiteRequest) returns (SiteResponse);
    rpc DeleteSite(IdRequest) returns (ResponseMessage);
    rpc UpdateSite(SiteEditRequest) returns (SiteResponse);
    rpc IniciarRotina(EmptyRequest) returns (ResponseMessage);
    rpc PararRotina(EmptyRequest) returns (ResponseMessage);
    rpc GetSite(IdRequest) returns (SiteResponse);
}

message EmptyRequest {}

message ResponseMessage {
    string message = 1;
}

message IdRequest {
    int32 id = 1;
}

message SiteRequest {
    string name = 1;
}

message SiteEditRequest {
    int32 id = 1;
    string name = 2;
}

message SiteResponse {
    int32 id = 1;
    string name = 2;
    google.protobuf.Timestamp dateCreate = 3;
    google.protobuf.Timestamp dateUpdate = 4;
    google.protobuf.Timestamp dateDelete = 5;
}

message SitesResponse {
    repeated SiteResponse sites = 1;
}
